# backend/libraries/db-utilities/src/models/Auth/User/Role.enum.ts
@@ -4,3 +4,17 @@ export enum Role {
     Premium = "premium",
     Basic = "basic"
 }
+
+export enum Access {
+    airline = "Airline",
+    retail = "Retail",
+    resturant = "Resturant",
+    rewardStore = "RewardStore"
+}
+
+export enum RewardPercentage {
+   basicReward = 5,
+   premiumReward =10
+}
+
+
