# backend/user-authentication/auth_swagger.json
@@ -35,7 +35,7 @@
     },
     "/auth/login": {
       "post": {
-        "operationId": "AuthController_getUser",
+        "operationId": "AuthController_signInUser",
         "parameters": [],
         "requestBody": {
           "required": true,
@@ -47,6 +47,33 @@
             }
           }
         },
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/User"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/auth/user/{email}": {
+      "get": {
+        "operationId": "AuthController_getUser",
+        "parameters": [
+          {
+            "name": "email",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "",
@@ -75,6 +102,13 @@
     }
   ],
   "components": {
+    "securitySchemes": {
+      "cookie": {
+        "type": "apiKey",
+        "in": "cookie",
+        "name": "accessToken"
+      }
+    },
     "schemas": {
       "UserDTO": {
         "type": "object",
@@ -121,6 +155,15 @@
           "contact": {
             "type": "string"
           },
+          "access": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            }
+          },
+          "rewardPercentage": {
+            "type": "number"
+          },
           "DOB": {
             "type": "string"
           },
@@ -139,6 +182,8 @@
           "email",
           "role",
           "contact",
+          "access",
+          "rewardPercentage",
           "DOB",
           "createdAt",
           "updatedAt"
